# DiseaseLLM

./: .gitignore  README.md  start.sh
backend/: .env  Cargo.toml  Dockerfile  sqlinit.sql
backend/src/: anonymous.rs  approval.rs  login.rs  main.rs  manualupload.rs  queryLLM.rs  signup,rs  signup.rs  upload.rs
datagen/: d.csv  d1.csv  d2.csv  d3.csv  d_temp.csv  gen.py  o.csv  ollamaattempt.py  test.py
frontend/src/: .env  package-lock.json  package.json
frontend/src/pages/: Navbar.js  _app.js  approval.js  bootstrap.min.css  comment.js  diagnosis.js  home.js  index.js  loading.js  login.js  manualupload.js  output.js  release.js  result.js  signin.js  signup.js  styles.css  test.js  upload.js  uploadobsolete.js
statistics/: a.csv  hello.py  test.py  x.sh
