[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"  # For web server functionality
actix-multipart = "0.4"  # For handling multipart form data
axum = "0.6"
tokio = "1"
serde = "=1.0.217"
tower = "0.4"
hyper = "0.14"
multer = "2.0"
env_logger = "0.9"
sanitize-filename="0.3"
futures-util = "0.3"
actix-cors = "0.6"
actix-jwt-auth-middleware = "0.5.0"
chrono = "=0.4.39"
form_urlencoded = "=1.2.1"
derive_builder = "=0.11.2"
ed25519-compact = "=2.1.1"
jwt-compact = { version = "0.8", features = ["ed25519-dalek"] }
ed25519-dalek = "2.1.1"
jsonwebtoken = "8.1"