[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"  # For web server functionality
actix-multipart = "0.7.2"  # For handling multipart form data
axum = "0.8.1"
tokio = "1"
serde = "1.0.218"
tower = "0.5.2"
hyper = "1.6.0"
multer = "3.1.0"
env_logger = "0.11.6"
sanitize-filename="0.6.0"
futures-util = "0.3"
actix-cors = "0.7.0"
actix-jwt-auth-middleware = "0.5.0"
chrono = "=0.4.40"
form_urlencoded = "=1.2.1"
derive_builder = "0.20.2"
crypto = "0.5.1"   
hex = "0.4"        
rand = "0.9.0"      
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
base64 = "0.22.1"
dotenv = "0.15"
serde_json = "1.0.140"
pdf-extract = "0.8.2"
pqc_kyber = "0.7.1"
reqwest = {version = "0.12.15", features = ['json']}
uuid = "1.16.0"
redis = "0.29.2"
actix-identity = "0.8.0"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
actix-session = { version = "0.10.1", features = ["cookie-session", "redis-session"] } 
